--- a/dashboard.html
+++ b/dashboard.html
@@ -80,21 +80,23 @@
                 <li>
                     <a href="dashboard.html">
                         <i class="bi bi-speedometer"></i>&emsp;
-                        Dashboard
+                        <strong>Dashboard</strong>
                     </a>
                 </li>
 
                 <li class="mt-3">
                     <a href="web_design.html">
                        <i class="bi bi-filetype-css"></i>&emsp;
-                       Web Design
+                       <strong>Programming Coruses</strong>
                     </a>
                 </li>
 
+                
+
                 <li class="mt-3">
                     <a href="">
-                        <i class="bi bi-filetype-php"></i>&emsp;
-                        Web Backend
+                        <i class="bi bi-person-circle"></i>&emsp;
+                        <strong>Profile</strong>
                     </a>
                 </li>
 
